--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_classic/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_classic/styles/images.css
@@ -32,6 +32,9 @@
  * COMPONENT RELATED IMAGES
  *
  */
+ 
+/*Body Background (none)*/
+
 /*HEADER
  -----------------------------------------------
  |[ Logo ]                 [      Meta Menu   ]|
@@ -167,6 +170,7 @@ body .wrapper {
  |[ Lists & Full Item ]                        |
  |         [        Footer       ]             |
  -----------------------------------------------*/
+
 /*START PAGE*/
 .myItemsIcon {
     background-image: url('../images/PM_Startpage_MyItems.gif');
@@ -322,19 +326,19 @@ body .wrapper {
 }
 
 .submittedItem {
-    background-image: url('../images/All_Status_AlbumPrivate_31_Static.gif');
+    background-image: url('../images/All_Status_ItemSubmitted_31_Static.gif');
     background-repeat: no-repeat;
     background-position: left;
 }
 
 .pendingItem {
-    background-image: url('../images/All_Status_AlbumPrivate_31_Static.gif');
+    background-image: url('../images/All_Status_ItemPending_31_Static.gif');
     background-repeat: no-repeat;
     background-position: left;
 }
 
 .releasedItem {
-    background-image: url('../images/All_Status_AlbumReleased_31_Static.gif');
+    background-image: url('../images/All_Status_ItemReleased_31_Static.gif');
     background-repeat: no-repeat;
     background-position: left;
 }
@@ -346,7 +350,7 @@ body .wrapper {
 }
 
 .withdrawnItem {
-    background-image: url('../images/All_Status_AlbumWithdrawn_31_Static.gif');
+    background-image: url('../images/All_Status_ItemWithdrawn_31_Static.gif');
     background-repeat: no-repeat;
     background-position: left;
 }
