--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
@@ -155,8 +155,13 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 /*SEPERATORS*/
-.metaMenu .seperator, .contentMenu .seperator, .pageBrowser .seperator {
-    background-color: #99C8E9;
+.contentMenu .seperator, .pageBrowser .seperator {
+	background-color:#A1CBDA;
+}
+
+.metaMenu .seperator {
+    background-color: transparent;
+	border-color: transparent;
 }
 
 .itemList .seperator {
@@ -167,7 +172,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
     background-color: #FFFFFF;
 }
 
-.metaMenu .seperator, .contentMenu .seperator, .pageBrowser .seperator {
+.contentMenu .seperator, .pageBrowser .seperator {
     border-color: #FFFFFF;
 }
 
@@ -210,9 +215,19 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
  
  */
 /*COLORING FOR ALL MENU INPUTS AND LABELS*/
-.metaMenu input, .metaMenu button, .metaMenu a, .quickSearchMenu a, .quickSearchCheckBoxMenu label, .advancedSearchMenu input, .advancedSearchMenu a, .organisationSearchMenu input, .organisationSearchMenu a, .mainMenu input, .mainMenu a, .contentMenu input, .contentMenu a {
-    background-color: #FFFFFF;
-    color: #0076C9;
+.metaMenu input, .metaMenu button, .metaMenu a, .quickSearchCheckBoxMenu label, .mainMenu input, .mainMenu a, .contentMenu input, .contentMenu a {
+    background-color: #066977;
+    color: #FFFFFF;
+}
+
+.quickSearchMenu a, .advancedSearchMenu input, .advancedSearchMenu a, .organisationSearchMenu input, .organisationSearchMenu a {
+	background-color:transparent;
+	color:#044585;
+}
+
+.quickSearchCheckBoxMenu label {
+	background-color:transparent;
+	color:#000000;
 }
 
 .logoAlternate span {
@@ -360,7 +375,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .listBackground .ascSort, .listBackground .descSort {
-    background-color: #FFFFFF;
+    background-color: transparent;
 }
 
 /*LIST ITEM*/
