--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/images.css
@@ -39,7 +39,7 @@ body {
 	background:url("../images/all_background_1.png") repeat-x scroll left top transparent;
 }
 
-body .wrapper, body .footer {
+body .wrapper {
 	background-image:url("../images/all_header_and_logo.png");
 	background-repeat:no-repeat;
 }
@@ -55,9 +55,7 @@ body .wrapper, body .footer {
  -----------------------------------------------
  */
 /*HEADER LOGO*/
-.headerLogo {
-    background: url('../../../globalImages/logo.png') no-repeat top left;
-}
+
 
 /*PUT IN HEADER LOGO FOR PRINT DISPLAY HERE*/
 @media print { .contentMenu {list-style-image:
@@ -298,6 +296,11 @@ body .wrapper {
 }
 
 /*LIST COMPONENT*/
+
+.itemList, .tiledList, .fullItem {
+	background-image:url("../images/all_ramp_list.png");
+}
+
 .itemList .checkBoxSelectButton {
     background-image: url('../images/All_DropDown_TriangleOpen_15_Active.gif');
     background-repeat: no-repeat;
