--- a/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
@@ -102,7 +102,7 @@
 					<h:outputText value="#{lbl.ViewItemFull_lblAlternativeTitle}"/><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText value="#{altTitle.value}" rendered="#{altTitle.value != ''}"/>
+					<h:outputText value="#{altTitle.value}" rendered="#{altTitle.value != ''}"  converter="HTMLSubSupConverter" escape="false"/>
 					<h:outputText value="&#160;" rendered="#{altTitle.value == ''}" escape="false"/>
 				</span>
 			</h:panelGroup>
