--- a/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
@@ -39,9 +39,10 @@
 		<span class="seperator"></span>
 		<div class="free_area0 itemBlockContent endline"><input id="btnShowMultipleAuthors" type="button"
 			class="free_txtBtn groupBtn tiny_marginLExcl showMultipleAuthors"
-			value="<h:outputText value='#{lbl.submission_lblAuthorCopyPasteLabel}'/>" /> <%-- Author copy&paste --%> <h:panelGroup
+			value="<h:outputText value='#{lbl.submission_lblAuthorCopyPasteLabel}'/>" /> 
+<%-- Author copy&paste --%> <h:panelGroup
 			layout="block" styleClass="free_area0 multipleAuthors">
-			<%-- Hidden field for display/non-display Author copy&paste group --%>
+<%-- Hidden field for display/non-display Author copy&paste group --%>
 			<h:inputHidden id="inpshowAuthorCopyPaste" value="#{EditItemSessionBean.showAuthorCopyPaste}"></h:inputHidden>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
 				<b class="xLarge_area0_p8 endline labelLine clear"> &#160;<h:outputText styleClass="mandatory"
@@ -61,6 +62,7 @@
 			</h:panelGroup>
 		</h:panelGroup></div>
 	</h:panelGroup>
+<%-- Start of grid list with label --%>
 	<div class="full_area0 itemBlock">
 	<span class="xLarge_area0_p8 endline blockHeader">&nbsp</span> 
 	<h:panelGroup layout="block" styleClass="free_area0 itemBlockContent endline">
@@ -82,6 +84,7 @@
 				rendered="#{!(genre.creator_person_organization_creator_organizations_display == 'false' && genre.creator_person_organization_creator_organizations_form_id == 'full-submission' || genre.creator_person_organization_creator_organizations_display == 'false' && genre.creator_person_organization_creator_organizations_form_id == 'all')}" />
 			<h:outputText styleClass="medium_area0" value=" " />
 		</h:panelGroup> 
+<%-- Start iteration of authors input --%>
 	<span class="full_area0">
 		<tr:iterator id="iterCreatorOrganisationAuthors" var="creator"
 			value="#{EditItemSessionBean.creators}" rows="0">
@@ -91,7 +94,7 @@
 					rendered="#{creator.personType and !(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
 					<span class="large_area0 xSmall_marginRExcl">&nbsp;</span>
 					<span class="xTiny_area0">&nbsp;</span>
-					<%-- Creator role --%>
+<%-- Creator role --%>
 					<h:selectOneMenu id="selCreatorRoleString" styleClass="small_select" value="#{creator.roleString}"
 						rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
 						<f:selectItems value="#{EditItemSessionBean.creatorRoles}" />
@@ -129,7 +132,7 @@
 <%-- If Organization is Creator --%>
 				<h:panelGroup layout="block" styleClass="full_area0 suggestAnchor" 
 					rendered="#{creator.organizationType and !(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
-					<%-- Creator role --%>
+<%-- Creator role --%>
 					<span class="large_area0 xSmall_marginRExcl">&nbsp;</span>
 					<span class="xTiny_area0">&nbsp;</span>
 					<h:selectOneMenu id="selCreatorOrgRoleString" styleClass="small_select" value="#{creator.roleString}"
@@ -164,16 +167,19 @@
 			</h:panelGroup>
 	</tr:iterator>
 			</span>
-		 </span> <span class="full_area0 clear">&nbsp;</span>
+		 </span>
+		 <span class="full_area0 clear">&nbsp;</span>
 		 <span class="free_area0 xTiny_marginLExcl endline">
-		 <!-- Creator Organizations - Headline -->
+<!-- Creator Organizations - Headline -->
 		<h:panelGroup layout="block" styleClass="itemLine noTopBorder"
 			rendered="#{!(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
 			<span class="large_area0 clear">&nbsp;</span>
 			<h:outputText styleClass="xSmall_area0 xSmall_marginLExcl" value="" />
 			<h:outputText styleClass="huge_area0 xSmall_marginLExcl" value="#{lbl.EditItem_lblOrganization}" />
 			<h:outputText styleClass="xLarge_area0" value="#{lbl.EditItem_lblOrganizationAddress}" />
-		</h:panelGroup> <tr:iterator id="iterCreatorOrganisation" var="organization" value="#{EditItemSessionBean.creatorOrganizations}"
+		</h:panelGroup> 
+		
+		<tr:iterator id="iterCreatorOrganisation" var="organization" value="#{EditItemSessionBean.creatorOrganizations}"
 			rows="0"
 			rendered="#{!(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
 			<h:panelGroup layout="block" styleClass="suggestAnchor personOrganizations large_marginLExcl clear">
@@ -203,7 +209,8 @@
 		<span class="full_area0 clear">&nbsp;</span>
 		</span>
 		<a class="free_area0 collapse"> <h:outputText
-			value="#{lbl.ViewItemFull_lblHideGroup}" /> <h:outputText value="#{genre.creator_person_organization_label}"
+			value="#{lbl.ViewItemFull_lblHideGroup}" /> 
+			<h:outputText value="#{genre.creator_person_organization_label}"
 			converter="GenreLabelConverter" /> </a>
 	</h:panelGroup>
 	<a class="free_area0 expand" > <h:outputText
