Former-commit-id: 932fd6154ba5b55f109b7e849e6195b2ba40aaf1

--- a/pubman/pubman_presentation/src/main/webapp/workspaces/ChooseWorkspace.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/workspaces/ChooseWorkspace.jspf
@@ -94,7 +94,7 @@
 		<span class="seperator"></span>
 		<span class="free_area0_p8 endline itemHeadline">
 			<b>
-				<h:outputLink id="lnkYearbookWorkspace" title="#{tip.chooseWorkspace_YearbookWorkspace}" value="#{ApplicationBean.appContext}YearbookCandidatesPage.jsp" rendered="#{BreadcrumbItemHistorySessionBean.lastPageIdentifier != 'YearbookWSPage' and (LoginHelper.isModerator || LoginHelper.isDepositor) and ContextListSessionBean.moderatorContextListSize>0}">
+				<h:outputLink id="lnkYearbookWorkspace" title="#{tip.chooseWorkspace_YearbookWorkspace}" value="#{ApplicationBean.appContext}YearbookPage.jsp" rendered="#{BreadcrumbItemHistorySessionBean.lastPageIdentifier != 'YearbookWSPage' and (LoginHelper.isModerator || LoginHelper.isDepositor) and ContextListSessionBean.moderatorContextListSize>0}">
 					<h:outputText value="#{lbl.chooseWorkspace_lnkYearbookWorkspace}"/>
 				</h:outputLink>
 			</b>
