--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
@@ -224,7 +224,8 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .metaMenu button, .metaMenu a {
-    background-color: #0F3834;
+    font-size: 109%;
+	background-color: #0F3834;
     color: #FFFFFF;
 }
 .metaMenu select {
@@ -260,6 +261,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .contentMenu span {
+	font-size: 107%;
     color: #888B8B;
 }
 
@@ -282,7 +284,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .contentMenu span, .contentMenu input, .contentMenu a {
-    font-weight: bold;
+	font-size: 107%;
 }
 
 /*Content
@@ -437,7 +439,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .fullItem .easySubmissionHeader b {
-    color: #AEAEAE;
+    color: #000000;
     font-size: 16px;
 }
 
