--- a/pubman/pubman_presentation/src/main/webapp/header/ui/StandardImports.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/ui/StandardImports.jspf
@@ -38,6 +38,8 @@
 </style>
 */				
 %>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
 <link href="<h:outputText value='#{ApplicationBean.commonPresentationUrl}'/>resources/cssFramework/main.css" type="text/css" rel="stylesheet"/>
 <h:outputText value="#{ApplicationBean.pubmanStyleTags}" escape="false"/>
 <link href="<h:outputText value='#{ApplicationBean.commonPresentationUrl}'/>resources/cssFramework/themes/skin_MPG_V3/styles/theme.css" id="MPG Final" type="text/css" title="MPG Final" rel="alternate stylesheet"/>
