New MPG Skin in work

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
@@ -101,7 +101,7 @@ h1, h4, h5 {
  */
 /*GENERAL*/
 body {
-    background-color: #B1D5DC !important;
+    background-color: #6FA3A9 !important;
     color: #000000;
     line-height: 145%;
 }
