--- a/pubman/pubman_presentation/src/main/webapp/browseBy/BrowseByStart.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/browseBy/BrowseByStart.jspf
@@ -22,8 +22,8 @@
 
 
             Copyright 2006-2010 Fachinformationszentrum Karlsruhe Gesellschaft
-            für wissenschaftlich-technische Information mbH and Max-Planck-
-            Gesellschaft zur Föderung der Wissenschaft e.V.
+            fÃ¼r wissenschaftlich-technische Information mbH and Max-Planck-
+            Gesellschaft zur Fï¿½derung der Wissenschaft e.V.
             All rights reserved. Use is subject to license terms.
              */
 %>
