--- a/pubman/pubman_presentation/src/main/webapp/workspaces/ChooseWorkspace.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/workspaces/ChooseWorkspace.jspf
@@ -87,7 +87,7 @@
 		</div>
 	</div>
 </h:panelGroup>				
-<h:panelGroup rendered="#{(LoginHelper.isModerator || LoginHelper.isDepositor) and ContextListSessionBean.yearbookContextListSize>0}">
+<h:panelGroup rendered="#{LoginHelper.isYearbookEditor}">
 	<div class="full_area0 itemHeader">
 		<span class="xLarge_area0 endline">
 			&#160;
@@ -95,7 +95,7 @@
 		<span class="seperator"></span>
 		<span class="free_area0_p8 endline itemHeadline">
 			<b>
-				<h:outputLink id="lnkYearbookWorkspace" title="#{tip.chooseWorkspace_YearbookWorkspace}" value="#{ApplicationBean.appContext}YearbookPage.jsp" rendered="#{BreadcrumbItemHistorySessionBean.lastPageIdentifier != 'YearbookWSPage' and (LoginHelper.isModerator || LoginHelper.isDepositor) and ContextListSessionBean.yearbookContextListSize>0}">
+				<h:outputLink id="lnkYearbookWorkspace" title="#{tip.chooseWorkspace_YearbookWorkspace}" value="#{ApplicationBean.appContext}YearbookPage.jsp">
 					<h:outputText value="#{lbl.chooseWorkspace_lnkYearbookWorkspace}"/>
 				</h:outputLink>
 			</b>
@@ -117,7 +117,7 @@
 		</div>
 	</div>
 </h:panelGroup>
-<h:panelGroup rendered="#{(LoginHelper.isModerator) and ContextListSessionBean.yearbookModeratorContextListSize>0}">
+<h:panelGroup rendered="#{(LoginHelper.isDepositor) and ContextListSessionBean.yearbookContextListSize>0}">
 	<div class="full_area0 itemHeader">
 		<span class="xLarge_area0 endline">
 			&#160;
